--- a/src/components/widgets/Announcement.astro
+++ b/src/components/widgets/Announcement.astro
@@ -1,5 +1,7 @@
 ---
+import { ANNOUNCEMENT_CONTENT } from '~/config.mjs';
 
+const { content = ANNOUNCEMENT_CONTENT } = Astro.props;
 ---
 
 <div
@@ -12,12 +14,44 @@
   <a href="https://astro.build/blog/astro-570/" class="text-muted hover:underline dark:text-slate-400 font-medium"
     >Astro v5.7 is now available! »</a
   >
-  <a
-    target="_blank"
-    rel="noopener"
-    class="ltr:ml-auto rtl:mr-auto w-[5.6rem] h-[1.25rem] ml-auto bg-contain inline-block bg-[url(https://img.shields.io/github/stars/onwidget/astrowind.svg?style=social&label=Stars&maxAge=86400)]"
-    title="If you like AstroWind, give us a star."
-    href="https://github.com/onwidget/astrowind"
-  >
-  </a>
+  <div class="text-sm text-gray-700 dark:text-gray-200 md:text-center">
+    {/* <Fragment set:html={content} /> */}
+    {content && <Fragment set:html={content} />}
+    <!--
+    <a
+      class="ml-1 rtl:ml-0 rtl:mr-1 hover:underline"
+      target="_blank"
+      rel="noopener"
+      href="https://github.com/sponsors/onwidget"
+      >Support us
+    </a>
+    ·
+    <a
+      class="ml-1 rtl:ml-0 rtl:mr-1 font-semibold hover:underline"
+      target="_blank"
+      rel="noopener"
+      href="https://github.com/onwidget/astrowind/blob/main/CHANGELOG.md"
+      >v{version}
+    </a>
+    ·
+    <a
+      class="inline-block ml-1 rtl:ml-0 rtl:mr-1 hover:underline"
+      target="_blank"
+      rel="noopener"
+      href="https://github.com/onwidget/astrowind"
+      ><img
+        class="ml-0.5 rtl:ml-0 rtl:mr-0.5 h-4 w-auto inline-block dark:hidden"
+        width={99}
+        height={16}
+        src="https://img.shields.io/github/stars/onwidget/astrowind.svg?style=social&label=Stars&maxAge=86400"
+        alt="Follow @onWidget on Twitter"
+      /><img
+        class="ml-0.5 rtl:ml-0 rtl:mr-0.5 h-4 w-auto hidden dark:inline-block"
+        width={99}
+        height={16}
+        src="https://img.shields.io/github/stars/onwidget/astrowind.svg?style=social&label=Stars&maxAge=86400&logo=github&logoColor=white"
+        alt="Follow @onWidget on Twitter"
+    /></a>
+    -->
+  </div>
 </div>
