--- a/src/pages/[...blog]/[...page].astro
+++ b/src/pages/[...blog]/[...page].astro
@@ -8,6 +8,7 @@ import Pagination from '~/components/blog/Pagination.astro';
 // import PostTags from "~/components/blog/Tags.astro";
 
 import { blogListRobots, getStaticPathsBlogList } from '~/utils/blog';
+import { getAppBlogSettings, getCanonical } from '~/utils/app';
 
 export const prerender = true;
 
@@ -24,7 +25,11 @@ const currentPage = page.currentPage ?? 1;
 // const allTags = await findTags();
 
 const metadata = {
-  title: `Blog${currentPage > 1 ? ` — Page ${currentPage}` : ''}`,
+  title: getAppBlogSettings()?.name || 'Blog',
+  subtitle: getAppBlogSettings()?.description || 'Stay updated with the latest news and insights from IT Technicians.',
+  // subtitle: 'A statically generated blog example with news, tutorials, resources and other interesting content related to AstroWind',
+  // canonical: Astro.canonicalURL.pathname.endsWith('/') ? Astro.canonicalURL.pathname.slice(0, -1) : Astro.canonicalURL,
+  canonical: getCanonical(Astro.canonicalURL.pathname),
   robots: {
     index: blogListRobots?.index && currentPage === 1,
     follow: blogListRobots?.follow,
